--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -240,6 +240,24 @@ config DRM_SII9234
 	  It is an I2C driver, that detects connection of MHL bridge
 	  and starts encapsulation of HDMI signal.
 
+config DRM_LONTIUM_LT8912
+        tristate "Lontium LT8912 MIPI-DSI to LVDS and HDMI/MHL bridge"
+        depends on OF
+        select DRM_KMS_HELPER
+        select REGMAP_I2C
+        select DRM_MIPI_DSI
+        help
+         Lontium LT8912 MIPI-DSI to LVDS and HDMI/MHL bridge chip driver.
+
+config DRM_LONTIUM_LT8912_RGB
+        tristate "Lontium LT8912 MIPI-DSI to LVDS and HDMI/MHL bridge"
+        depends on OF
+        select DRM_KMS_HELPER
+        select REGMAP_I2C
+        select DRM_MIPI_DSI
+        help
+         Lontium LT8912 MIPI-DSI to LVDS and HDMI/MHL bridge chip driver.
+
 config DRM_SIMPLE_BRIDGE
 	tristate "Simple DRM bridge support"
 	depends on OF
